// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProvenancePath theme x density > matches the dark / comfortable snapshot 1`] = `
<div
  data-density="comfortable"
  data-theme="dark"
>
  <nav
    aria-label="Provenance"
    class="rh-provenance-path rh-provenance-path--horizontal"
  >
    <ol
      class="rh-provenance-path__steps"
    >
      <li
        class="rh-provenance-path__step"
      >
        <span
          class="rh-entity-ref rh-entity-ref--sm"
          data-authority="qualified"
          data-kind="claim"
          data-resolution="resolved"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-scale rh-icon rh-entity-ref__kind"
            data-icon="scale"
            fill="none"
            focusable="false"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 3v18"
            />
            <path
              d="m19 8 3 8a5 5 0 0 1-6 0zV7"
            />
            <path
              d="M3 7h1a17 17 0 0 0 8-2 17 17 0 0 0 8 2h1"
            />
            <path
              d="m5 8 3 8a5 5 0 0 1-6 0zV7"
            />
            <path
              d="M7 21h10"
            />
          </svg>
          <span
            class="rh-entity-ref__id"
          >
            C0041
          </span>
          <span
            class="rh-entity-ref__label"
          >
            Stiffer gels shorten neurites
          </span>
          <span
            class="rh-badge rh-badge--sm rh-badge--status-qualified rh-authority-badge rh-entity-ref__authority"
            data-authority="qualified"
            data-status="qualified"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-info rh-icon"
              data-icon="info"
              fill="none"
              focusable="false"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="M12 16v-4"
              />
              <path
                d="M12 8h.01"
              />
            </svg>
            <span
              class="rh-badge__label"
            >
              Qualified
            </span>
          </span>
        </span>
      </li>
      <li
        class="rh-provenance-path__step"
      >
        <span
          class="rh-provenance-path__relation"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-arrow-right rh-icon"
            data-icon="arrow-right"
            fill="none"
            focusable="false"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 12h14"
            />
            <path
              d="m12 5 7 7-7 7"
            />
          </svg>
          <span>
            supports
          </span>
        </span>
        <a
          class="rh-entity-ref rh-entity-ref--sm rh-entity-ref--interactive"
          data-authority="accepted"
          data-kind="evidence"
          data-resolution="resolved"
          href="rh://evidence/E0482"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-quote rh-icon rh-entity-ref__kind"
            data-icon="quote"
            fill="none"
            focusable="false"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16 3a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2 1 1 0 0 1 1 1v1a2 2 0 0 1-2 2 1 1 0 0 0-1 1v2a1 1 0 0 0 1 1 6 6 0 0 0 6-6V5a2 2 0 0 0-2-2z"
            />
            <path
              d="M5 3a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2 1 1 0 0 1 1 1v1a2 2 0 0 1-2 2 1 1 0 0 0-1 1v2a1 1 0 0 0 1 1 6 6 0 0 0 6-6V5a2 2 0 0 0-2-2z"
            />
          </svg>
          <span
            class="rh-entity-ref__id"
          >
            E0482
          </span>
          <span
            class="rh-entity-ref__label"
          >
            Storage modulus at 24 h
          </span>
          <span
            class="rh-badge rh-badge--sm rh-badge--status-accepted rh-authority-badge rh-entity-ref__authority"
            data-authority="accepted"
            data-status="accepted"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-circle-check rh-icon"
              data-icon="circle-check"
              fill="none"
              focusable="false"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="m16 9-5.5 5.5L8 12"
              />
            </svg>
            <span
              class="rh-badge__label"
            >
              Accepted
            </span>
          </span>
        </a>
      </li>
      <li
        class="rh-provenance-path__step"
      >
        <span
          class="rh-provenance-path__relation"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-arrow-right rh-icon"
            data-icon="arrow-right"
            fill="none"
            focusable="false"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 12h14"
            />
            <path
              d="m12 5 7 7-7 7"
            />
          </svg>
          <span>
            anchored_at
          </span>
        </span>
        <span
          class="rh-entity-ref rh-entity-ref--sm"
          data-authority="stale"
          data-kind="artifact"
          data-resolution="stale"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-file-text rh-icon rh-entity-ref__kind"
            data-icon="file-text"
            fill="none"
            focusable="false"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z"
            />
            <path
              d="M14 2v5a1 1 0 0 0 1 1h5"
            />
            <path
              d="M10 9H8"
            />
            <path
              d="M16 13H8"
            />
            <path
              d="M16 17H8"
            />
          </svg>
          <span
            class="rh-entity-ref__id"
          >
            A0017-3
          </span>
          <span
            class="rh-entity-ref__label"
          >
            Preprint v3
          </span>
          <span
            class="rh-badge rh-badge--sm rh-badge--status-stale rh-authority-badge rh-entity-ref__authority"
            data-authority="stale"
            data-status="stale"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-clock rh-icon"
              data-icon="clock"
              fill="none"
              focusable="false"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="M12 6v6l4 2"
              />
            </svg>
            <span
              class="rh-badge__label"
            >
              Stale
            </span>
          </span>
          <span
            class="rh-entity-ref__resolution"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-clock rh-icon"
              data-icon="clock"
              fill="none"
              focusable="false"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="M12 6v6l4 2"
              />
            </svg>
            <span>
              Stale
            </span>
          </span>
        </span>
      </li>
    </ol>
  </nav>
</div>
`;

exports[`ProvenancePath theme x density > matches the dark / compact snapshot 1`] = `
<div
  data-density="compact"
  data-theme="dark"
>
  <nav
    aria-label="Provenance"
    class="rh-provenance-path rh-provenance-path--horizontal"
  >
    <ol
      class="rh-provenance-path__steps"
    >
      <li
        class="rh-provenance-path__step"
      >
        <span
          class="rh-entity-ref rh-entity-ref--sm"
          data-authority="qualified"
          data-kind="claim"
          data-resolution="resolved"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-scale rh-icon rh-entity-ref__kind"
            data-icon="scale"
            fill="none"
            focusable="false"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 3v18"
            />
            <path
              d="m19 8 3 8a5 5 0 0 1-6 0zV7"
            />
            <path
              d="M3 7h1a17 17 0 0 0 8-2 17 17 0 0 0 8 2h1"
            />
            <path
              d="m5 8 3 8a5 5 0 0 1-6 0zV7"
            />
            <path
              d="M7 21h10"
            />
          </svg>
          <span
            class="rh-entity-ref__id"
          >
            C0041
          </span>
          <span
            class="rh-entity-ref__label"
          >
            Stiffer gels shorten neurites
          </span>
          <span
            class="rh-badge rh-badge--sm rh-badge--status-qualified rh-authority-badge rh-entity-ref__authority"
            data-authority="qualified"
            data-status="qualified"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-info rh-icon"
              data-icon="info"
              fill="none"
              focusable="false"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="M12 16v-4"
              />
              <path
                d="M12 8h.01"
              />
            </svg>
            <span
              class="rh-badge__label"
            >
              Qualified
            </span>
          </span>
        </span>
      </li>
      <li
        class="rh-provenance-path__step"
      >
        <span
          class="rh-provenance-path__relation"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-arrow-right rh-icon"
            data-icon="arrow-right"
            fill="none"
            focusable="false"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 12h14"
            />
            <path
              d="m12 5 7 7-7 7"
            />
          </svg>
          <span>
            supports
          </span>
        </span>
        <a
          class="rh-entity-ref rh-entity-ref--sm rh-entity-ref--interactive"
          data-authority="accepted"
          data-kind="evidence"
          data-resolution="resolved"
          href="rh://evidence/E0482"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-quote rh-icon rh-entity-ref__kind"
            data-icon="quote"
            fill="none"
            focusable="false"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16 3a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2 1 1 0 0 1 1 1v1a2 2 0 0 1-2 2 1 1 0 0 0-1 1v2a1 1 0 0 0 1 1 6 6 0 0 0 6-6V5a2 2 0 0 0-2-2z"
            />
            <path
              d="M5 3a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2 1 1 0 0 1 1 1v1a2 2 0 0 1-2 2 1 1 0 0 0-1 1v2a1 1 0 0 0 1 1 6 6 0 0 0 6-6V5a2 2 0 0 0-2-2z"
            />
          </svg>
          <span
            class="rh-entity-ref__id"
          >
            E0482
          </span>
          <span
            class="rh-entity-ref__label"
          >
            Storage modulus at 24 h
          </span>
          <span
            class="rh-badge rh-badge--sm rh-badge--status-accepted rh-authority-badge rh-entity-ref__authority"
            data-authority="accepted"
            data-status="accepted"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-circle-check rh-icon"
              data-icon="circle-check"
              fill="none"
              focusable="false"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="m16 9-5.5 5.5L8 12"
              />
            </svg>
            <span
              class="rh-badge__label"
            >
              Accepted
            </span>
          </span>
        </a>
      </li>
      <li
        class="rh-provenance-path__step"
      >
        <span
          class="rh-provenance-path__relation"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-arrow-right rh-icon"
            data-icon="arrow-right"
            fill="none"
            focusable="false"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 12h14"
            />
            <path
              d="m12 5 7 7-7 7"
            />
          </svg>
          <span>
            anchored_at
          </span>
        </span>
        <span
          class="rh-entity-ref rh-entity-ref--sm"
          data-authority="stale"
          data-kind="artifact"
          data-resolution="stale"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-file-text rh-icon rh-entity-ref__kind"
            data-icon="file-text"
            fill="none"
            focusable="false"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z"
            />
            <path
              d="M14 2v5a1 1 0 0 0 1 1h5"
            />
            <path
              d="M10 9H8"
            />
            <path
              d="M16 13H8"
            />
            <path
              d="M16 17H8"
            />
          </svg>
          <span
            class="rh-entity-ref__id"
          >
            A0017-3
          </span>
          <span
            class="rh-entity-ref__label"
          >
            Preprint v3
          </span>
          <span
            class="rh-badge rh-badge--sm rh-badge--status-stale rh-authority-badge rh-entity-ref__authority"
            data-authority="stale"
            data-status="stale"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-clock rh-icon"
              data-icon="clock"
              fill="none"
              focusable="false"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="M12 6v6l4 2"
              />
            </svg>
            <span
              class="rh-badge__label"
            >
              Stale
            </span>
          </span>
          <span
            class="rh-entity-ref__resolution"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-clock rh-icon"
              data-icon="clock"
              fill="none"
              focusable="false"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="M12 6v6l4 2"
              />
            </svg>
            <span>
              Stale
            </span>
          </span>
        </span>
      </li>
    </ol>
  </nav>
</div>
`;

exports[`ProvenancePath theme x density > matches the light / comfortable snapshot 1`] = `
<div
  data-density="comfortable"
  data-theme="light"
>
  <nav
    aria-label="Provenance"
    class="rh-provenance-path rh-provenance-path--horizontal"
  >
    <ol
      class="rh-provenance-path__steps"
    >
      <li
        class="rh-provenance-path__step"
      >
        <span
          class="rh-entity-ref rh-entity-ref--sm"
          data-authority="qualified"
          data-kind="claim"
          data-resolution="resolved"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-scale rh-icon rh-entity-ref__kind"
            data-icon="scale"
            fill="none"
            focusable="false"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 3v18"
            />
            <path
              d="m19 8 3 8a5 5 0 0 1-6 0zV7"
            />
            <path
              d="M3 7h1a17 17 0 0 0 8-2 17 17 0 0 0 8 2h1"
            />
            <path
              d="m5 8 3 8a5 5 0 0 1-6 0zV7"
            />
            <path
              d="M7 21h10"
            />
          </svg>
          <span
            class="rh-entity-ref__id"
          >
            C0041
          </span>
          <span
            class="rh-entity-ref__label"
          >
            Stiffer gels shorten neurites
          </span>
          <span
            class="rh-badge rh-badge--sm rh-badge--status-qualified rh-authority-badge rh-entity-ref__authority"
            data-authority="qualified"
            data-status="qualified"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-info rh-icon"
              data-icon="info"
              fill="none"
              focusable="false"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="M12 16v-4"
              />
              <path
                d="M12 8h.01"
              />
            </svg>
            <span
              class="rh-badge__label"
            >
              Qualified
            </span>
          </span>
        </span>
      </li>
      <li
        class="rh-provenance-path__step"
      >
        <span
          class="rh-provenance-path__relation"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-arrow-right rh-icon"
            data-icon="arrow-right"
            fill="none"
            focusable="false"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 12h14"
            />
            <path
              d="m12 5 7 7-7 7"
            />
          </svg>
          <span>
            supports
          </span>
        </span>
        <a
          class="rh-entity-ref rh-entity-ref--sm rh-entity-ref--interactive"
          data-authority="accepted"
          data-kind="evidence"
          data-resolution="resolved"
          href="rh://evidence/E0482"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-quote rh-icon rh-entity-ref__kind"
            data-icon="quote"
            fill="none"
            focusable="false"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16 3a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2 1 1 0 0 1 1 1v1a2 2 0 0 1-2 2 1 1 0 0 0-1 1v2a1 1 0 0 0 1 1 6 6 0 0 0 6-6V5a2 2 0 0 0-2-2z"
            />
            <path
              d="M5 3a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2 1 1 0 0 1 1 1v1a2 2 0 0 1-2 2 1 1 0 0 0-1 1v2a1 1 0 0 0 1 1 6 6 0 0 0 6-6V5a2 2 0 0 0-2-2z"
            />
          </svg>
          <span
            class="rh-entity-ref__id"
          >
            E0482
          </span>
          <span
            class="rh-entity-ref__label"
          >
            Storage modulus at 24 h
          </span>
          <span
            class="rh-badge rh-badge--sm rh-badge--status-accepted rh-authority-badge rh-entity-ref__authority"
            data-authority="accepted"
            data-status="accepted"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-circle-check rh-icon"
              data-icon="circle-check"
              fill="none"
              focusable="false"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="m16 9-5.5 5.5L8 12"
              />
            </svg>
            <span
              class="rh-badge__label"
            >
              Accepted
            </span>
          </span>
        </a>
      </li>
      <li
        class="rh-provenance-path__step"
      >
        <span
          class="rh-provenance-path__relation"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-arrow-right rh-icon"
            data-icon="arrow-right"
            fill="none"
            focusable="false"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 12h14"
            />
            <path
              d="m12 5 7 7-7 7"
            />
          </svg>
          <span>
            anchored_at
          </span>
        </span>
        <span
          class="rh-entity-ref rh-entity-ref--sm"
          data-authority="stale"
          data-kind="artifact"
          data-resolution="stale"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-file-text rh-icon rh-entity-ref__kind"
            data-icon="file-text"
            fill="none"
            focusable="false"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z"
            />
            <path
              d="M14 2v5a1 1 0 0 0 1 1h5"
            />
            <path
              d="M10 9H8"
            />
            <path
              d="M16 13H8"
            />
            <path
              d="M16 17H8"
            />
          </svg>
          <span
            class="rh-entity-ref__id"
          >
            A0017-3
          </span>
          <span
            class="rh-entity-ref__label"
          >
            Preprint v3
          </span>
          <span
            class="rh-badge rh-badge--sm rh-badge--status-stale rh-authority-badge rh-entity-ref__authority"
            data-authority="stale"
            data-status="stale"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-clock rh-icon"
              data-icon="clock"
              fill="none"
              focusable="false"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="M12 6v6l4 2"
              />
            </svg>
            <span
              class="rh-badge__label"
            >
              Stale
            </span>
          </span>
          <span
            class="rh-entity-ref__resolution"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-clock rh-icon"
              data-icon="clock"
              fill="none"
              focusable="false"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="M12 6v6l4 2"
              />
            </svg>
            <span>
              Stale
            </span>
          </span>
        </span>
      </li>
    </ol>
  </nav>
</div>
`;

exports[`ProvenancePath theme x density > matches the light / compact snapshot 1`] = `
<div
  data-density="compact"
  data-theme="light"
>
  <nav
    aria-label="Provenance"
    class="rh-provenance-path rh-provenance-path--horizontal"
  >
    <ol
      class="rh-provenance-path__steps"
    >
      <li
        class="rh-provenance-path__step"
      >
        <span
          class="rh-entity-ref rh-entity-ref--sm"
          data-authority="qualified"
          data-kind="claim"
          data-resolution="resolved"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-scale rh-icon rh-entity-ref__kind"
            data-icon="scale"
            fill="none"
            focusable="false"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 3v18"
            />
            <path
              d="m19 8 3 8a5 5 0 0 1-6 0zV7"
            />
            <path
              d="M3 7h1a17 17 0 0 0 8-2 17 17 0 0 0 8 2h1"
            />
            <path
              d="m5 8 3 8a5 5 0 0 1-6 0zV7"
            />
            <path
              d="M7 21h10"
            />
          </svg>
          <span
            class="rh-entity-ref__id"
          >
            C0041
          </span>
          <span
            class="rh-entity-ref__label"
          >
            Stiffer gels shorten neurites
          </span>
          <span
            class="rh-badge rh-badge--sm rh-badge--status-qualified rh-authority-badge rh-entity-ref__authority"
            data-authority="qualified"
            data-status="qualified"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-info rh-icon"
              data-icon="info"
              fill="none"
              focusable="false"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="M12 16v-4"
              />
              <path
                d="M12 8h.01"
              />
            </svg>
            <span
              class="rh-badge__label"
            >
              Qualified
            </span>
          </span>
        </span>
      </li>
      <li
        class="rh-provenance-path__step"
      >
        <span
          class="rh-provenance-path__relation"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-arrow-right rh-icon"
            data-icon="arrow-right"
            fill="none"
            focusable="false"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 12h14"
            />
            <path
              d="m12 5 7 7-7 7"
            />
          </svg>
          <span>
            supports
          </span>
        </span>
        <a
          class="rh-entity-ref rh-entity-ref--sm rh-entity-ref--interactive"
          data-authority="accepted"
          data-kind="evidence"
          data-resolution="resolved"
          href="rh://evidence/E0482"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-quote rh-icon rh-entity-ref__kind"
            data-icon="quote"
            fill="none"
            focusable="false"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16 3a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2 1 1 0 0 1 1 1v1a2 2 0 0 1-2 2 1 1 0 0 0-1 1v2a1 1 0 0 0 1 1 6 6 0 0 0 6-6V5a2 2 0 0 0-2-2z"
            />
            <path
              d="M5 3a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2 1 1 0 0 1 1 1v1a2 2 0 0 1-2 2 1 1 0 0 0-1 1v2a1 1 0 0 0 1 1 6 6 0 0 0 6-6V5a2 2 0 0 0-2-2z"
            />
          </svg>
          <span
            class="rh-entity-ref__id"
          >
            E0482
          </span>
          <span
            class="rh-entity-ref__label"
          >
            Storage modulus at 24 h
          </span>
          <span
            class="rh-badge rh-badge--sm rh-badge--status-accepted rh-authority-badge rh-entity-ref__authority"
            data-authority="accepted"
            data-status="accepted"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-circle-check rh-icon"
              data-icon="circle-check"
              fill="none"
              focusable="false"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="m16 9-5.5 5.5L8 12"
              />
            </svg>
            <span
              class="rh-badge__label"
            >
              Accepted
            </span>
          </span>
        </a>
      </li>
      <li
        class="rh-provenance-path__step"
      >
        <span
          class="rh-provenance-path__relation"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-arrow-right rh-icon"
            data-icon="arrow-right"
            fill="none"
            focusable="false"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 12h14"
            />
            <path
              d="m12 5 7 7-7 7"
            />
          </svg>
          <span>
            anchored_at
          </span>
        </span>
        <span
          class="rh-entity-ref rh-entity-ref--sm"
          data-authority="stale"
          data-kind="artifact"
          data-resolution="stale"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-file-text rh-icon rh-entity-ref__kind"
            data-icon="file-text"
            fill="none"
            focusable="false"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z"
            />
            <path
              d="M14 2v5a1 1 0 0 0 1 1h5"
            />
            <path
              d="M10 9H8"
            />
            <path
              d="M16 13H8"
            />
            <path
              d="M16 17H8"
            />
          </svg>
          <span
            class="rh-entity-ref__id"
          >
            A0017-3
          </span>
          <span
            class="rh-entity-ref__label"
          >
            Preprint v3
          </span>
          <span
            class="rh-badge rh-badge--sm rh-badge--status-stale rh-authority-badge rh-entity-ref__authority"
            data-authority="stale"
            data-status="stale"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-clock rh-icon"
              data-icon="clock"
              fill="none"
              focusable="false"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="M12 6v6l4 2"
              />
            </svg>
            <span
              class="rh-badge__label"
            >
              Stale
            </span>
          </span>
          <span
            class="rh-entity-ref__resolution"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-clock rh-icon"
              data-icon="clock"
              fill="none"
              focusable="false"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="M12 6v6l4 2"
              />
            </svg>
            <span>
              Stale
            </span>
          </span>
        </span>
      </li>
    </ol>
  </nav>
</div>
`;
